* Alle *.pdf und *.pdf_t Dateien aus dem Repository genommen. Einfach   rubber verwenden und alle notwendigen Dateien werden automatisch   erzeugt.
* Zwei neue Grafiken pump(reg|cf)-ablbaum.fig für die Beweise der
  Pumping-Lema hinzugefügt.

* skript.latex:
  + Farben für Links und todo getauscht. Rot macht sich auf einem
    schwarz-weiß-Ausdruck schlecht. Bei den todos kommt es nicht so drauf
    an.

  + Als Trenner für theorem wird wieder der Punkt verwendet, da die
    Nummerierung nur zwei Zahlen umfasst.

  + Die Umgebung proof umdefiniert, damit nach dem Name ein Zeilenumbruch
    kommt.

  + \gdw und \gdwdef auf $gdw$ bzw $gdw_{def}$ umgestellt. So verwendet
    es IIRC auch Herr Vogel in der Vorlesung.

  + subsection und subsubsection-Namen für \autoref auf Abschnitt gesetzt

  + \listlinebreak definiert, dass einen Zeilenumbruch macht, wo Latex
    sonst über "There's no line to end here" meckert.

  + \algokeyword für alle Schlüsselwörter (while, if, done) in
    Algorithmen definiert

  + \ndef auf \perp umdefiniert

  + \mod zu \bmod (aus amsmath) umdefiniert, da sonst ein großer Abstand
    vor \mod ist

  + eine neue Umgebung auflistung definiert, die den Inhalt in einer
    zweispaltigen Tabelle darstellt und die erste von der zweiten Spalte
    durch \ldots trennt; gedacht für N...Nichterminale\\T...Terminale

  + Das komplette Skript überarbeitet und verbessert.


git-svn-id: https://svn.lug-jena.de/uni-skripte@133 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-info4/Makefile
+++ b/vogel-info4/Makefile
@@ -10,12 +10,16 @@ clean:
             skript.log skript.out skript.pdf skript.toc skript.thm
 
 mrproper: clean
-	$(FIG:.fig=.pdf) $(FIG:.fig=.pdf_t)
+	rm $(FIG:.fig=.pdf) $(FIG:.fig=.pdf_t)
 
 full: skript.ind
-	while grep -q Rerun skript.log; do \
+	mkdir tmp 2>/dev/null || rm tmp/*
+	while ! [ -e tmp/skript.aux ] || \
+	  !(for i in tmp/*; do cmp --quiet $${i#*/} $$i || return 1; done); do \
+	    cp skript.* tmp; rm tmp/skript.log tmp/skript.pdf; \
 	    rm skript.pdf; $(MAKE) skript.pdf; \
-	done
+	done; \
+	rm -r tmp
 
 .PRECIOUS: $(FIG:.fig=.pdf)
 
